k8s/ddr-data-writer/ddr-data-writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddr-data-writer-deployment
  labels:
    app: ddr-data-writer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ddr-data-writer
  template:
    metadata:
      labels:
        app: ddr-data-writer
    spec:
      containers:
      - name: ddr-data-writer
        image: yxchia98/ddr-data-writer:latest
        ports:
        - containerPort: 8080
