k8s/ddr-data-writer/ddr-data-writer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddr-data-writer-svc
  labels:
    app: ddr-data-writer-svc
spec:
  selector:
    app: ddr-data-writer
  ports:
    - name: ddr-data-writer-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
